Fix: Improve schematic edit form and list
This commit improves the schematic edit form and list:

- Fixe the edit button for edit the schematics
- Fixes file name overflow in file upload field.
- Adds file fetching from Appwrite storage to populate existing data in the edit form.
- Improves the schematic list by adding a background image and preventing navigation on delete button click.
- Adds scrollbar to the file upload field.

--- a/src/index.css
+++ b/src/index.css
@@ -284,6 +284,7 @@ body {
 /* WebKit-based browsers (Chrome, Edge, Safari) */
 ::-webkit-scrollbar {
   width: 8px;
+  height: 8px;
 }
 
 ::-webkit-scrollbar-track {
